--- a/model/model_nanogpt.ipynb
+++ b/model/model_nanogpt.ipynb
@@ -20,6 +20,19 @@
     "\n",
     "from torch.utils.data import DataLoader, Subset, Dataset\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from torch.nn import functional as F\n",
+    "import math\n",
+    "\n",
+    "class LayerNorm(nn.Module):\n",
+    "    \"\"\" LayerNorm but with an optional bias. PyTorch doesn't support simply bias=False \"\"\"\n",
+    "\n",
+    "    def __init__(self, ndim, bias):\n",
+    "        super().__init__()\n",
+    "        self.weight = nn.Parameter(torch.ones(ndim))\n",
+    "        self.bias = nn.Parameter(torch.zeros(ndim)) if bias else None\n",
+    "\n",
+    "    def forward(self, input):\n",
+    "        return F.layer_norm(input, self.weight.shape, self.weight, self.bias, 1e-5)\n",
     "\n",
     "class RMSNorm(nn.Module):\n",
     "    def __init__(self, dim, eps=1e-8, bias = None):\n",
@@ -30,14 +43,28 @@
     "    def forward(self, x):\n",
     "        norm = x.norm(keepdim=True, dim=-1) * (x.size(-1) ** -0.5)\n",
     "        return self.scale * (x / (norm + self.eps))\n",
+    "\n",
+    "class Block(nn.Module):\n",
+    "\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
+    "        self.ln_1 = config.norm_fn(config.n_embd, bias=config.bias)\n",
+    "        self.attn = SelfAttention(config)\n",
+    "        self.ln_2 = config.norm_fn(config.n_embd, bias=config.bias)\n",
+    "        self.mlp = MLP(config)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x + self.attn(self.ln_1(x))\n",
+    "        x = x + self.mlp(self.ln_2(x))\n",
+    "        return x\n",
     "    \n",
     "class MLP(nn.Module):\n",
     "\n",
     "    def __init__(self, config, use_dropout=True):\n",
     "        super().__init__()\n",
-    "        self.c_fc    = nn.Linear(config.input_dim, 4 * config.input_dim, bias=config.bias)\n",
+    "        self.c_fc    = nn.Linear(config.n_embd, 4 * config.n_embd, bias=config.bias)\n",
     "        self.gelu    = nn.GELU()\n",
-    "        self.c_proj  = nn.Linear(4 * config.input_dim, config.input_dim, bias=config.bias)\n",
+    "        self.c_proj  = nn.Linear(4 * config.n_embd, config.n_embd, bias=config.bias)\n",
     "        self.dropout = nn.Dropout(config.dropout)\n",
     "        self.use_dropout = use_dropout\n",
     "\n",
@@ -47,89 +74,103 @@
     "        x = self.c_proj(x)\n",
     "        if self.use_dropout: x = self.dropout(x)\n",
     "        return x\n",
-    "    \n",
-    "class Attention(nn.Module):\n",
+    "\n",
+    "class SelfAttention(nn.Module):\n",
+    "\n",
     "    def __init__(self, config):\n",
     "        super().__init__()\n",
-    "        self.input_dim = config.input_dim\n",
-    "        self.query = nn.Linear(config.input_dim, config.input_dim)\n",
-    "        self.key = nn.Linear(config.input_dim, config.input_dim)\n",
-    "        self.value = nn.Linear(config.input_dim, config.input_dim)\n",
-    "        self.softmax = nn.Softmax(dim=2)\n",
-    "        self.dense_layer = nn.Linear(config.input_dim, config.input_dim)\n",
-    "        self.dropout = nn.Dropout(config.dropout)\n",
+    "        assert config.n_embd % config.n_head == 0\n",
+    "        # key, query, value projections for all heads, but in a batch\n",
+    "        self.c_attn = nn.Linear(config.n_embd, 3 * config.n_embd, bias=config.bias)\n",
+    "        # output projection\n",
+    "        self.c_proj = nn.Linear(config.n_embd, config.n_embd, bias=config.bias)\n",
+    "        # regularization\n",
+    "        self.attn_dropout = nn.Dropout(config.dropout)\n",
+    "        self.resid_dropout = nn.Dropout(config.dropout)\n",
+    "        self.n_head = config.n_head\n",
+    "        self.n_embd = config.n_embd\n",
+    "        self.dropout = config.dropout\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.size() # batch size, sequence length, embedding dimensionality (n_embd)\n",
+    "\n",
+    "        # calculate query, key, values for all heads in batch and move head forward to be the batch dim\n",
+    "        q, k, v  = self.c_attn(x).split(self.n_embd, dim=2)\n",
+    "        k = k.view(B, T, self.n_head, C // self.n_head).transpose(1, 2) # (B, nh, T, hs)\n",
+    "        q = q.view(B, T, self.n_head, C // self.n_head).transpose(1, 2) # (B, nh, T, hs)\n",
+    "        v = v.view(B, T, self.n_head, C // self.n_head).transpose(1, 2) # (B, nh, T, hs)\n",
+    "\n",
+    "        # self-attention; Self-attend: (B, nh, T, hs) x (B, nh, hs, T) -> (B, nh, T, T)\n",
+    "        # efficient attention using Flash Attention CUDA kernels\n",
+    "        y = torch.nn.functional.scaled_dot_product_attention(q, k, v, attn_mask=None, dropout_p=self.dropout if self.training else 0, is_causal=False)\n",
+    "        y = y.transpose(1, 2).contiguous().view(B, T, C) # re-assemble all head outputs side by side\n",
+    "\n",
+    "        # output projection\n",
+    "        y = self.resid_dropout(self.c_proj(y))\n",
+    "        return y\n",
+    "\n",
+    "class GPT(nn.Module):\n",
+    "\n",
+    "    def __init__(self, config):\n",
+    "        super().__init__()\n",
     "        self.config = config\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        queries = self.query(x)\n",
-    "        keys = self.key(x)\n",
-    "        values = self.value(x)\n",
-    "        scores = torch.bmm(queries, keys.transpose(-2, -1)) / (self.input_dim ** 0.5)\n",
-    "        attention = self.softmax(scores)\n",
-    "        y = torch.bmm(attention, values)\n",
-    "        return self.dense_layer(y)\n",
-    "\n",
-    "\n",
-    "class Block(nn.Module):\n",
-    "    def __init__(self, config, norm_fn = nn.LayerNorm):\n",
-    "        super().__init__()\n",
-    "        self.norm1 = config.norm_fn(config.input_dim)  # RMS normalization\n",
-    "        self.norm2 = config.norm_fn(config.input_dim)\n",
-    "        self.attn = Attention(config)\n",
-    "        self.mlp = MLP(config)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = x + self.attn(self.norm1(x))\n",
-    "        x = x + self.mlp(self.norm2(x))\n",
-    "        return x\n",
-    "\n",
-    "class Classifier(nn.Module):\n",
-    "    def __init__(self, config):\n",
-    "        super(Classifier, self).__init__()\n",
-    "\n",
-    "        self.blocks = nn.ModuleList([Block(config, norm_fn = config.norm_fn) for _ in range(config.n_layer)])\n",
-    "\n",
-    "        self.input_dim = config.input_dim \n",
     "        self.pooling = config.pooling\n",
-    "        assert self.pooling in ['cls', 'mean', 'max'], 'pooling should be either cls, mean, or max'\n",
-    "        self.cls_token = nn.Parameter(torch.randn(1, 1, config.input_dim))  # Learnable CLS token\n",
     "\n",
-    "        # self.emb_transform = nn.Linear(config.input_dim, config.input_dim)  \n",
-    "        # self.emb_transform = MLP(config,use_dropout=False)  \n",
+    "        self.transformer = nn.ModuleDict(dict(\n",
+    "            drop = nn.Dropout(config.dropout),\n",
+    "            blocks = nn.ModuleList([Block(config) for _ in range(config.n_layer)]),\n",
+    "            ln_f = config.norm_fn(config.n_embd, bias=config.bias),\n",
+    "        ))\n",
+    "        self.lm_head = nn.Linear(config.n_embd, config.vocab_size, bias=False)\n",
+    "        # with weight tying when using torch.compile() some warnings get generated:\n",
+    "        # \"UserWarning: functional_call was passed multiple values for tied weights.\n",
+    "        # This behavior is deprecated and will be an error in future versions\"\n",
+    "        # not 100% sure what this is, so far seems to be harmless. TODO investigate\n",
+    "        # self.transformer.wte.weight = self.lm_head.weight # https://paperswithcode.com/method/weight-tying\n",
     "\n",
-    "        self.num_labels = config.n_labels # number of labels for classifier\n",
-    "        self.classifier = nn.Linear(config.input_dim, config.n_labels) # FC Layer\n",
-    "        self.loss_func = nn.CrossEntropyLoss() # Change this if it becomes more than binary classification\n",
-    "        \n",
+    "        # init all weights\n",
     "        self.apply(self._init_weights)\n",
+    "        # apply special scaled init to the residual projections, per GPT-2 paper\n",
+    "        for pn, p in self.named_parameters():\n",
+    "            if pn.endswith('c_proj.weight'):\n",
+    "                torch.nn.init.normal_(p, mean=0.0, std=0.02/math.sqrt(2 * config.n_layer))\n",
+    "\n",
+    "        # report number of parameters\n",
+    "        print(\"number of parameters: %.2fM\" % (self.get_num_params()/1e6,))\n",
+    "\n",
+    "    def get_num_params(self):\n",
+    "        \"\"\"\n",
+    "        Return the number of parameters in the model.\n",
+    "        For non-embedding count (default), the position embeddings get subtracted.\n",
+    "        The token embeddings would too, except due to the parameter sharing these\n",
+    "        params are actually used as weights in the final layer, so we include them.\n",
+    "        \"\"\"\n",
+    "        n_params = sum(p.numel() for p in self.parameters())\n",
+    "        return n_params\n",
     "\n",
     "    def _init_weights(self, module):\n",
     "        if isinstance(module, nn.Linear):\n",
     "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
     "            if module.bias is not None:\n",
     "                torch.nn.init.zeros_(module.bias)\n",
+    "        elif isinstance(module, nn.Embedding):\n",
+    "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        # is_pad = x == float('-inf')\n",
-    "        # pad_rows = is_pad.all(dim=2)\n",
-    "        # x = self.emb_transform(x)\n",
-    "\n",
-    "        if self.pooling == 'cls':\n",
-    "            batch_size = x.size(0)\n",
-    "            cls_tokens = self.cls_token.expand(batch_size, -1, -1)  # Expand CLS token for each sequence in the batch\n",
-    "            x = torch.cat((cls_tokens, x), dim=1)\n",
+    "    def forward(self, x, targets=None):\n",
     "        \n",
-    "        for block in self.blocks:\n",
+    "        for block in self.transformer.blocks:\n",
     "            x = block(x)\n",
+    "        x = self.transformer.ln_f(x)\n",
     "\n",
     "        if self.pooling == 'cls':\n",
-    "            classifier_input = x[:, 0, :].view(-1, self.input_dim)\n",
+    "            classifier_input = x[:, 0, :].view(-1, self.n_embd)\n",
     "        elif self.pooling == 'mean':\n",
     "            classifier_input = x.mean(dim=1)\n",
     "        elif self.pooling == 'max':\n",
     "            classifier_input, _ = x.max(dim=1)\n",
     "\n",
-    "        logits = self.classifier(classifier_input)\n",
+    "        logits = self.lm_head(classifier_input)\n",
+    "\n",
     "        return logits"
    ]
   },
@@ -139,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from custom_dataset import custom_collate, Dataset_MutationList\n",
+    "from custom_dataset import *\n",
     "\n",
     "# LOAD DATA\n",
     "canonical_mut_embeddings_esm2 = np.load('../aa/canonical_mut_embeddings_esm2.npy')\n",
@@ -160,7 +201,7 @@
     "# Create DataLoader\n",
     "# dataloader = DataLoader(dataset, batch_size=100, shuffle=False, collate_fn=custom_collate)\n",
     "\n",
-    "## TEST/TRAIN SPLIT\n",
+    "# TEST/TRAIN SPLIT\n",
     "test_size = .2\n",
     "random_state = 42\n",
     "batch_size = 1\n",
@@ -199,23 +240,25 @@
     "import torch.optim as optim\n",
     "from tqdm import tqdm\n",
     "\n",
-    "class Config:\n",
-    "    n_layer: int = 1\n",
-    "    input_dim: int = 640\n",
+    "class GPTConfig:\n",
+    "    block_size: int = 30\n",
+    "    vocab_size: int = 17 #n_labels\n",
+    "    n_layer: int = 1 #12\n",
+    "    n_head: int = 1 #10\n",
+    "    n_embd: int = 640\n",
     "    dropout: float = 0.0\n",
-    "    bias: bool = False\n",
-    "    n_labels: int = 17\n",
-    "    pooling : str = 'cls'\n",
-    "    norm_fn: nn.Module = nn.LayerNorm\n",
+    "    norm_fn: nn.Module =  LayerNorm\n",
+    "    pooling: str = 'mean'\n",
+    "    bias: bool = False # True: bias in Linears and LayerNorms, like GPT-2. False: a bit better and faster\n",
     "\n",
     "print('n labels:',nlabels)\n",
-    "config = Config()\n",
-    "config.n_labels = nlabels\n",
+    "config = GPTConfig()\n",
+    "config.vocab_size = nlabels\n",
     "config.pooling = 'mean'\n",
-    "config.norm_fn = nn.LayerNorm\n",
+    "config.norm_fn = RMSNorm\n",
     "\n",
-    "model = Classifier(config)\n",
-    "model.to(device)\n",
+    "model = GPT(config)\n",
+    "model.to('cuda:1')\n",
     "\n",
     "num_epochs = 10\n",
     "learning_rate = 0.001\n",
@@ -231,7 +274,6 @@
     "        for batch_idx, (data, target) in pbar:\n",
     "            optimizer.zero_grad()\n",
     "            output = model(data)\n",
-    "            # assert False\n",
     "            loss = criterion(output, target)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
