--- a/model/model_singleHeadAttention.ipynb
+++ b/model/model_singleHeadAttention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,6 @@
     "        y = torch.bmm(attention, values)\n",
     "        return self.dense_layer(y)\n",
     "\n",
-    "\n",
     "class Block(nn.Module):\n",
     "    def __init__(self, config, norm_fn = nn.LayerNorm):\n",
     "        super().__init__()\n",
@@ -135,9 +134,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 BINARYdata_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "1 data_CANCER_TYPE_DETAILED_3MinMutations_1696MinCancerType.csv\n",
+      "2 BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_1696MinCancerType.csv\n",
+      "3 data_CANCER_TYPE_DETAILED_0MinMutations_1696MinCancerType.csv\n",
+      "4 BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_1696MinCancerType.csv\n",
+      "5 data_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
+      "6 data_CANCER_TYPE_0MinMutations_1696MinCancerType.csv\n",
+      "7 BINARYdata_CANCER_TYPE_0MinMutations_169MinCancerType.csv\n",
+      "8 data_CANCER_TYPE_0MinMutations_169MinCancerType.csv\n",
+      "9 BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_169MinCancerType.csv\n",
+      "10 data_CANCER_TYPE_DETAILED_0MinMutations_169MinCancerType.csv\n",
+      "11 BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_169MinCancerType.csv\n",
+      "12 BINARYdata_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
+      "13 BINARYdata_CANCER_TYPE_0MinMutations_1696MinCancerType.csv\n",
+      "14 data_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "15 data_CANCER_TYPE_DETAILED_3MinMutations_169MinCancerType.csv\n",
+      "\n",
+      " BINARYdata_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "Index(['barcode', 'idxs', 'str_label', 'int_label'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "from custom_dataset import custom_collate, Dataset_MutationList\n",
     "\n",
@@ -181,9 +206,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.22298445159933342"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# majority classifier\n",
     "print(len(data_df['int_label'].unique()))\n",
@@ -192,32 +235,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n labels: 17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:   0%|          | 20/49445 [00:00<09:59, 82.38it/s, Epoch=1/3, Loss: 1.7225]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  41%|████      | 20029/49445 [01:32<02:54, 168.98it/s, Epoch=1/3, Loss: 1.3050]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  81%|████████  | 40020/49445 [04:06<01:16, 122.43it/s, Epoch=1/3, Loss: 1.0588]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 49445/49445 [05:22<00:00, 153.24it/s, Epoch=1/3, Loss: 7.1183]   \n",
+      "TESTING: 100%|██████████| 12362/12362 [00:10<00:00, 1144.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 22.30%, (2757 of 12362)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:   0%|          | 15/49445 [00:00<05:41, 144.66it/s, Epoch=2/3, Loss: 1.8787]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  41%|████      | 20036/49445 [02:23<02:05, 235.26it/s, Epoch=2/3, Loss: 1.5146] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  81%|████████  | 40015/49445 [04:58<01:22, 114.69it/s, Epoch=2/3, Loss: 3.8572] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 49445/49445 [06:01<00:00, 136.72it/s, Epoch=2/3, Loss: 2.7306] \n",
+      "TESTING: 100%|██████████| 12362/12362 [00:10<00:00, 1134.48it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 38.05%, (4704 of 12362)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:   0%|          | 17/49445 [00:00<05:04, 162.46it/s, Epoch=3/3, Loss: 3.9766]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  40%|████      | 20017/49445 [02:14<04:12, 116.61it/s, Epoch=3/3, Loss: 1.6758]   "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:  81%|████████  | 40023/49445 [04:22<00:43, 218.64it/s, Epoch=3/3, Loss: 2.1613]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING: 100%|██████████| 49445/49445 [05:10<00:00, 159.12it/s, Epoch=3/3, Loss: 4.4619] \n",
+      "TESTING: 100%|██████████| 12362/12362 [00:10<00:00, 1138.38it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 40.17%, (4966 of 12362)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "from tqdm import tqdm\n",
     "\n",
     "class Config:\n",
-    "    n_layer: int = 1\n",
+    "    n_layer: int = 3\n",
     "    input_dim: int = 640\n",
     "    dropout: float = 0.0\n",
     "    bias: bool = False\n",
     "    n_labels: int = 17\n",
-    "    pooling : str = 'cls'\n",
+    "    pooling : str = 'mean'\n",
     "    norm_fn: nn.Module = nn.LayerNorm\n",
     "\n",
     "print('n labels:',nlabels)\n",
     "config = Config()\n",
     "config.n_labels = nlabels\n",
-    "config.pooling = 'mean'\n",
-    "config.norm_fn = nn.LayerNorm\n",
     "\n",
     "model = Classifier(config)\n",
     "model.to(device)\n",
     "\n",
-    "num_epochs = 10\n",
+    "num_epochs = 3\n",
     "learning_rate = 0.001\n",
     "\n",
     "# Loss function and optimizer\n",
