--- a/model/model_nanogpt.ipynb
+++ b/model/model_nanogpt.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/pandas/core/arrays/masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n",
+      "/home/dandreas/.conda/envs/deepV_a100/lib/python3.10/site-packages/transformers/utils/generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
+      "  _torch_pytree._register_pytree_node(\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -53,8 +64,8 @@
     "        self.ln_2 = config.norm_fn(config.n_embd, bias=config.bias)\n",
     "        self.mlp = MLP(config)\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        x = x + self.attn(self.ln_1(x))\n",
+    "    def forward(self, x, positions = None, mask = None):\n",
+    "        x = x + self.attn(self.ln_1(x), positions, mask)\n",
     "        x = x + self.mlp(self.ln_2(x))\n",
     "        return x\n",
     "    \n",
@@ -90,10 +101,13 @@
     "        self.n_head = config.n_head\n",
     "        self.n_embd = config.n_embd\n",
     "        self.dropout = config.dropout\n",
+    "        self.pos_embs = nn.Embedding(config.max_len, config.n_embd)\n",
     "\n",
-    "    def forward(self, x):\n",
+    "    def forward(self, x, positions = None, mask = None):\n",
     "        B, T, C = x.size() # batch size, sequence length, embedding dimensionality (n_embd)\n",
-    "\n",
+    "        if positions is not None:\n",
+    "            pos_emb = self.pos_embs(positions)\n",
+    "            x = x + pos_emb\n",
     "        # calculate query, key, values for all heads in batch and move head forward to be the batch dim\n",
     "        q, k, v  = self.c_attn(x).split(self.n_embd, dim=2)\n",
     "        k = k.view(B, T, self.n_head, C // self.n_head).transpose(1, 2) # (B, nh, T, hs)\n",
@@ -101,8 +115,13 @@
     "        v = v.view(B, T, self.n_head, C // self.n_head).transpose(1, 2) # (B, nh, T, hs)\n",
     "\n",
     "        # self-attention; Self-attend: (B, nh, T, hs) x (B, nh, hs, T) -> (B, nh, T, T)\n",
-    "        # efficient attention using Flash Attention CUDA kernels\n",
-    "        y = torch.nn.functional.scaled_dot_product_attention(q, k, v, attn_mask=None, dropout_p=self.dropout if self.training else 0, is_causal=False)\n",
+    "        att = (q @ k.transpose(-2, -1)) * (1.0 / math.sqrt(k.size(-1)))\n",
+    "        if mask is not None:\n",
+    "            mask = mask.unsqueeze(1).expand(att.size())\n",
+    "            att = att.masked_fill(mask == 0, -torch.inf)\n",
+    "        att = F.softmax(att, dim=-1)\n",
+    "        att = self.attn_dropout(att)\n",
+    "        y = att @ v # (B, nh, T, T) x (B, nh, T, hs) -> (B, nh, T, hs)\n",
     "        y = y.transpose(1, 2).contiguous().view(B, T, C) # re-assemble all head outputs side by side\n",
     "\n",
     "        # output projection\n",
@@ -156,18 +175,28 @@
     "        elif isinstance(module, nn.Embedding):\n",
     "            torch.nn.init.normal_(module.weight, mean=0.0, std=0.02)\n",
     "\n",
-    "    def forward(self, x, targets=None):\n",
+    "    def forward(self, x, positions=None):\n",
+    "        if self.pooling == 'cls':\n",
+    "            batch_size = x.size(0)\n",
+    "            cls_tokens = self.cls_token.expand(batch_size, -1, -1)  # Expand CLS token for each sequence in the batch\n",
+    "            x = torch.cat((cls_tokens, x), dim=1)\n",
+    "\n",
+    "        mask = (x != 0).any(dim=-1).float()  # Mask out zero vectors\n",
     "        \n",
     "        for block in self.transformer.blocks:\n",
-    "            x = block(x)\n",
+    "            x = block(x, positions, mask)\n",
     "        x = self.transformer.ln_f(x)\n",
     "\n",
     "        if self.pooling == 'cls':\n",
-    "            classifier_input = x[:, 0, :].view(-1, self.n_embd)\n",
+    "            classifier_input = x[:, 0, :].view(-1, self.input_dim)\n",
     "        elif self.pooling == 'mean':\n",
-    "            classifier_input = x.mean(dim=1)\n",
+    "            mask = mask.unsqueeze(-1).expand_as(x)\n",
+    "            classifier_input = (x * mask).sum(dim=-2) / mask.sum(dim=-2)\n",
     "        elif self.pooling == 'max':\n",
-    "            classifier_input, _ = x.max(dim=1)\n",
+    "            mask = mask.unsqueeze(-1).expand_as(x)\n",
+    "            classifier_input, _ = (x * mask).max(dim=-2)\n",
+    "        \n",
+    "        if self.num_labels==1: classifier_input = self.norm(classifier_input) #survival analysis\n",
     "\n",
     "        logits = self.lm_head(classifier_input)\n",
     "\n",
@@ -176,27 +205,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37 \t BINARYdata_CANCER_TYPE_0MinMutations_1696MinCancerType.csv\n",
+      "24 \t BINARYdata_CANCER_TYPE_0MinMutations_169MinCancerType.csv\n",
+      "1 \t BINARYdata_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "32 \t BINARYdata_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
+      "12 \t BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_1696MinCancerType.csv\n",
+      "26 \t BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_169MinCancerType.csv\n",
+      "10 \t BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_1696MinCancerType.csv\n",
+      "30 \t BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_169MinCancerType.csv\n",
+      "23 \t data_CANCER_TYPE_0MinMutations_1696MinCancerType.csv\n",
+      "25 \t data_CANCER_TYPE_0MinMutations_169MinCancerType.csv\n",
+      "41 \t data_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "17 \t data_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
+      "11 \t data_CANCER_TYPE_DETAILED_0MinMutations_1696MinCancerType.csv\n",
+      "28 \t data_CANCER_TYPE_DETAILED_0MinMutations_169MinCancerType.csv\n",
+      "4 \t data_CANCER_TYPE_DETAILED_3MinMutations_1696MinCancerType.csv\n",
+      "47 \t data_CANCER_TYPE_DETAILED_3MinMutations_169MinCancerType.csv\n",
+      "35 \t label_mappings\n",
+      "45 \t top100_BINARYdata_CANCER_TYPE_0MinMutations_1604MinCancerType.csv\n",
+      "22 \t top100_BINARYdata_CANCER_TYPE_0MinMutations_160MinCancerType.csv\n",
+      "33 \t top100_BINARYdata_CANCER_TYPE_3MinMutations_1604MinCancerType.csv\n",
+      "0 \t top100_BINARYdata_CANCER_TYPE_3MinMutations_160MinCancerType.csv\n",
+      "2 \t top100_BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_1604MinCancerType.csv\n",
+      "43 \t top100_BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_160MinCancerType.csv\n",
+      "6 \t top100_BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_1604MinCancerType.csv\n",
+      "21 \t top100_BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_160MinCancerType.csv\n",
+      "38 \t top100_data_CANCER_TYPE_0MinMutations_1604MinCancerType.csv\n",
+      "40 \t top100_data_CANCER_TYPE_0MinMutations_160MinCancerType.csv\n",
+      "36 \t top100_data_CANCER_TYPE_3MinMutations_1604MinCancerType.csv\n",
+      "31 \t top100_data_CANCER_TYPE_3MinMutations_160MinCancerType.csv\n",
+      "3 \t top100_data_CANCER_TYPE_DETAILED_0MinMutations_1604MinCancerType.csv\n",
+      "20 \t top100_data_CANCER_TYPE_DETAILED_0MinMutations_160MinCancerType.csv\n",
+      "44 \t top100_data_CANCER_TYPE_DETAILED_3MinMutations_1604MinCancerType.csv\n",
+      "16 \t top100_data_CANCER_TYPE_DETAILED_3MinMutations_160MinCancerType.csv\n",
+      "34 \t top10_BINARYdata_CANCER_TYPE_0MinMutations_1213MinCancerType.csv\n",
+      "46 \t top10_BINARYdata_CANCER_TYPE_0MinMutations_121MinCancerType.csv\n",
+      "15 \t top10_BINARYdata_CANCER_TYPE_3MinMutations_1213MinCancerType.csv\n",
+      "29 \t top10_BINARYdata_CANCER_TYPE_3MinMutations_121MinCancerType.csv\n",
+      "48 \t top10_BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_1213MinCancerType.csv\n",
+      "42 \t top10_BINARYdata_CANCER_TYPE_DETAILED_0MinMutations_121MinCancerType.csv\n",
+      "19 \t top10_BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_1213MinCancerType.csv\n",
+      "8 \t top10_BINARYdata_CANCER_TYPE_DETAILED_3MinMutations_121MinCancerType.csv\n",
+      "39 \t top10_data_CANCER_TYPE_0MinMutations_1696MinCancerType.csv\n",
+      "9 \t top10_data_CANCER_TYPE_0MinMutations_169MinCancerType.csv\n",
+      "14 \t top10_data_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n",
+      "7 \t top10_data_CANCER_TYPE_3MinMutations_169MinCancerType.csv\n",
+      "5 \t top10_data_CANCER_TYPE_DETAILED_0MinMutations_1696MinCancerType.csv\n",
+      "27 \t top10_data_CANCER_TYPE_DETAILED_0MinMutations_169MinCancerType.csv\n",
+      "18 \t top10_data_CANCER_TYPE_DETAILED_3MinMutations_1696MinCancerType.csv\n",
+      "13 \t top10_data_CANCER_TYPE_DETAILED_3MinMutations_169MinCancerType.csv\n",
+      "\n",
+      " data_CANCER_TYPE_3MinMutations_1696MinCancerType.csv\n"
+     ]
+    }
+   ],
    "source": [
     "from custom_dataset import *\n",
     "\n",
     "# LOAD DATA\n",
-    "canonical_mut_embeddings_esm2 = np.load('../aa/canonical_mut_embeddings_esm2.npy')\n",
+    "# canonical_ave_embeddings_esm2 = np.load('../aa/canonical_mut_average_embeddings_esm2.npy')\n",
     "data_dir = '../labeled_data/'\n",
     "labeled_data = os.listdir(data_dir)\n",
-    "for ni,i in enumerate(labeled_data):print(ni,i)\n",
-    "data = labeled_data[0]\n",
+    "for ni,i in sorted(zip(labeled_data,range(len(labeled_data)))):print(i,'\\t',ni)\n",
+    "data = labeled_data[41]\n",
     "print('\\n',data)\n",
     "data_df = pd.read_csv(data_dir+data)\n",
     "data = data_df['idxs'].values\n",
     "labels = torch.tensor(data_df['int_label'].values,dtype=torch.long)\n",
     "nlabels = len(data_df['int_label'].unique())\n",
-    "device = 'cuda:1'\n",
+    "device = 'cuda:0'\n",
     "\n",
     "# Create dataset\n",
-    "dataset = Dataset_MutationList(data, labels, canonical_mut_embeddings_esm2,device)\n",
+    "dataset = Dataset_MutationList(data_df, canonical_ave_embeddings_esm2,device)\n",
     "\n",
     "# Create DataLoader\n",
     "# dataloader = DataLoader(dataset, batch_size=100, shuffle=False, collate_fn=custom_collate)\n",
@@ -222,9 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.18109837773478196"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# majority classifier\n",
     "print(len(data_df['int_label'].unique()))\n",
@@ -233,9 +338,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n labels: 20\n",
+      "number of parameters: 5.86M\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TRAINING:   0%|          | 0/80628 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'positions' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 38\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_idx, (data, target) \u001b[38;5;129;01min\u001b[39;00m pbar:\n\u001b[1;32m     37\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 38\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     39\u001b[0m     loss \u001b[38;5;241m=\u001b[39m criterion(output, target)\n\u001b[1;32m     40\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1553\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1551\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1552\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1553\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1562\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1557\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1558\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1559\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1560\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1561\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1562\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1564\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1565\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[1], line 168\u001b[0m, in \u001b[0;36mGPT.forward\u001b[0;34m(self, x, targets)\u001b[0m\n\u001b[1;32m    165\u001b[0m mask \u001b[38;5;241m=\u001b[39m (x \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39many(dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mfloat()  \u001b[38;5;66;03m# Mask out zero vectors\u001b[39;00m\n\u001b[1;32m    167\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m block \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransformer\u001b[38;5;241m.\u001b[39mblocks:\n\u001b[0;32m--> 168\u001b[0m     x \u001b[38;5;241m=\u001b[39m block(x, \u001b[43mpositions\u001b[49m, mask)\n\u001b[1;32m    169\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransformer\u001b[38;5;241m.\u001b[39mln_f(x)\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpooling \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcls\u001b[39m\u001b[38;5;124m'\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'positions' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "from tqdm import tqdm\n",
@@ -247,6 +382,7 @@
     "    n_head: int = 1 #10\n",
     "    n_embd: int = 640\n",
     "    dropout: float = 0.0\n",
+    "    max_len: int = 1448\n",
     "    norm_fn: nn.Module =  LayerNorm\n",
     "    pooling: str = 'mean'\n",
     "    bias: bool = False # True: bias in Linears and LayerNorms, like GPT-2. False: a bit better and faster\n",
