--- a/model/model_naiveBinary.ipynb
+++ b/model/model_naiveBinary.ipynb
@@ -19,22 +19,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 \t BINARYdata_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "12 \t BINARYdata_CANCER_TYPE_0_10percentMinCancerType.csv\n",
-      "2 \t BINARYdata_CANCER_TYPE_1_00percentMinCancerType.csv\n",
-      "4 \t BINARYdata_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
-      "11 \t BINARYdata_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
-      "9 \t BINARYdata_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
-      "6 \t data_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "5 \t data_CANCER_TYPE_0_10percentMinCancerType.csv\n",
-      "10 \t data_CANCER_TYPE_1_00percentMinCancerType.csv\n",
-      "1 \t data_CANCER_TYPE_DETAILED_0_00percentMinCancerType.csv\n",
-      "3 \t data_CANCER_TYPE_DETAILED_0_10percentMinCancerType.csv\n",
-      "7 \t data_CANCER_TYPE_DETAILED_1_00percentMinCancerType.csv\n",
-      "8 \t label_mappings\n",
+      "0 \t data_0_00_survival_ratio1.csv\n",
+      "1 \t data_0_00percentMinCancerType.csv\n",
+      "2 \t data_0_10percentMinCancerType.csv\n",
+      "4 \t data_1_00percentMinCancerType.csv\n",
+      "3 \t label_mappings\n",
       "\n",
-      " BINARYdata_CANCER_TYPE_0_00percentMinCancerType.csv\n",
-      "159977 samples\n"
+      " data_1_00percentMinCancerType.csv\n",
+      "145518 samples\n"
      ]
     }
    ],
@@ -47,15 +39,15 @@
     "labeled_data = os.listdir(data_dir)\n",
     "for ni,i in sorted(zip(labeled_data,range(len(labeled_data)))):print(i,'\\t',ni)\n",
     "\n",
-    "data = labeled_data[0]\n",
+    "data = labeled_data[4]\n",
     "print('\\n',data)\n",
     "data_df = pd.read_csv(data_dir+data)\n",
     "\n",
-    "nlabels = len(data_df['int_label'].unique())\n",
+    "nlabels = len(data_df['CANCER_TYPE_INT'].unique())\n",
     "device = 'cuda:1'\n",
     "\n",
     "# Create dataset\n",
-    "dataset = Dataset_Binary(data_df, device)\n",
+    "dataset = Dataset_Binary(data_df, 'CANCER_TYPE_INT', device)\n",
     "\n",
     "# Create DataLoader\n",
     "# dataloader = DataLoader(dataset, batch_size=100, shuffle=False, collate_fn=custom_collate)"
@@ -63,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(tensor([1., 1., 1.,  ..., 0., 0., 0.], device='cuda:1'),\n",
-       " tensor(69, device='cuda:1'))"
+       " tensor(13, device='cuda:1'))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,96 +76,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n labels: 109\n"
+      "n labels: 20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING:   0%|          | 0/1280 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TRAINING: 100%|██████████| 1280/1280 [00:18<00:00, 70.00it/s, Epoch=1/5, Loss: 1.9892] \n",
-      "TESTING: 100%|██████████| 320/320 [00:03<00:00, 99.44it/s] \n"
+      "TRAINING: 100%|██████████| 1165/1165 [00:05<00:00, 210.41it/s, Epoch=1/5, Loss: 1.7822]\n",
+      "TESTING: 100%|██████████| 292/292 [00:00<00:00, 299.72it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 45.32%, (14499 of 31996)\n"
+      "Test Accuracy: 51.86%, (15094 of 29104)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 1280/1280 [00:15<00:00, 80.71it/s, Epoch=2/5, Loss: 2.2410] \n",
-      "TESTING: 100%|██████████| 320/320 [00:03<00:00, 99.68it/s] \n"
+      "TRAINING: 100%|██████████| 1165/1165 [00:05<00:00, 203.45it/s, Epoch=2/5, Loss: 2.2148]\n",
+      "TESTING: 100%|██████████| 292/292 [00:00<00:00, 303.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 46.22%, (14789 of 31996)\n"
+      "Test Accuracy: 53.09%, (15451 of 29104)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 1280/1280 [00:16<00:00, 77.36it/s, Epoch=3/5, Loss: 1.9562] \n",
-      "TESTING: 100%|██████████| 320/320 [00:03<00:00, 93.75it/s] \n"
+      "TRAINING: 100%|██████████| 1165/1165 [00:06<00:00, 192.34it/s, Epoch=3/5, Loss: 0.9644]\n",
+      "TESTING: 100%|██████████| 292/292 [00:00<00:00, 302.21it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 46.81%, (14978 of 31996)\n"
+      "Test Accuracy: 52.93%, (15406 of 29104)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 1280/1280 [00:16<00:00, 78.76it/s, Epoch=4/5, Loss: 1.9235] \n",
-      "TESTING: 100%|██████████| 320/320 [00:03<00:00, 100.31it/s]\n"
+      "TRAINING: 100%|██████████| 1165/1165 [00:05<00:00, 210.17it/s, Epoch=4/5, Loss: 1.5195]\n",
+      "TESTING: 100%|██████████| 292/292 [00:00<00:00, 304.48it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 46.64%, (14923 of 31996)\n"
+      "Test Accuracy: 52.82%, (15374 of 29104)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TRAINING: 100%|██████████| 1280/1280 [00:16<00:00, 78.27it/s, Epoch=5/5, Loss: 1.7096] \n",
-      "TESTING: 100%|██████████| 320/320 [00:01<00:00, 301.31it/s]"
+      "TRAINING: 100%|██████████| 1165/1165 [00:05<00:00, 205.46it/s, Epoch=5/5, Loss: 1.1391]\n",
+      "TESTING: 100%|██████████| 292/292 [00:01<00:00, 291.73it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 46.08%, (14745 of 31996)\n"
+      "Test Accuracy: 51.99%, (15131 of 29104)\n",
+      "Best Accuracy: 53.09% at epoch 1\n"
      ]
     },
     {
