--- a/muat/signatures.ipynb
+++ b/muat/signatures.ipynb
@@ -559,6 +559,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.317877795582805\n",
+      "                              precision    recall  f1-score   support\n",
+      "\n",
+      "              Bladder Cancer       0.39      0.35      0.37       992\n",
+      "               Breast Cancer       0.26      0.34      0.29      3084\n",
+      "   Cancer of Unknown Primary       0.08      0.01      0.02      1110\n",
+      "           Colorectal Cancer       0.30      0.48      0.37      3441\n",
+      "          Endometrial Cancer       0.31      0.13      0.18      1199\n",
+      "      Esophagogastric Cancer       0.13      0.03      0.05       957\n",
+      "                      Glioma       0.26      0.25      0.25      2252\n",
+      "        Head and Neck Cancer       0.03      0.00      0.01       407\n",
+      "        Hepatobiliary Cancer       0.11      0.03      0.05       720\n",
+      "                    Leukemia       0.28      0.19      0.23       808\n",
+      "     Mature B-Cell Neoplasms       0.29      0.11      0.16      1137\n",
+      "                    Melanoma       0.53      0.57      0.55      1357\n",
+      "Myeloproliferative Neoplasms       0.49      0.59      0.54       379\n",
+      "  Non-Small Cell Lung Cancer       0.38      0.63      0.47      5052\n",
+      "              Ovarian Cancer       0.17      0.08      0.11      1340\n",
+      "           Pancreatic Cancer       0.30      0.37      0.33      1528\n",
+      "             Prostate Cancer       0.14      0.07      0.09      1145\n",
+      "        Renal Cell Carcinoma       0.11      0.02      0.04       510\n",
+      "         Soft Tissue Sarcoma       0.12      0.03      0.05       832\n",
+      "              Thyroid Cancer       0.20      0.12      0.15       456\n",
+      "\n",
+      "                    accuracy                           0.32     28706\n",
+      "                   macro avg       0.24      0.22      0.22     28706\n",
+      "                weighted avg       0.28      0.32      0.28     28706\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# 1) Merge label (CANCER_TYPE) onto snv150_df\n",
+    "#    snv150_df is indexed by barcode, so we merge on the index vs. class_data['barcode']\n",
+    "df_merged = snv150_df.merge(\n",
+    "    class_data[['barcode', 'CANCER_TYPE']], \n",
+    "    left_index=True, \n",
+    "    right_on='barcode'\n",
+    ")\n",
+    "\n",
+    "# 2) Separate features (the 150 SNV columns) and the label (CANCER_TYPE).\n",
+    "X = df_merged[snv150_df.columns]  # the 150 mutation features\n",
+    "y = df_merged['CANCER_TYPE']\n",
+    "\n",
+    "# 3) Split into train/test sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, \n",
+    "    test_size=0.2, \n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# 4) Train a Random Forest\n",
+    "rf = RandomForestClassifier(\n",
+    "    n_estimators=100, \n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# 5) Predict and evaluate\n",
+    "y_pred = rf.predict(X_test)\n",
+    "\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
